tests/snapshot/error/stack_trace/non_error/yield_throw.js
function* gen() {
    yield 1;
}
const g = gen();
g.next();
g.throw(42);
